# wasm-life

./: Cargo.toml  LICENSE  README.md  index.html  index.js  styles.css
src/: lib.rs  life.rs  main.rs  point.rs  screen.rs  world.rs
src/life/: screen.rs  world.rs
