[package]
name = "wasm-life"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Mermans <stefanmermans99@gmail.com>"]
description = "Practice rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/StefanMermans/wasm-life"

[lib]
name = "wasm_life"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "life"
path = "src/main.rs"


[dependencies]
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'CanvasRenderingContext2d',
  'ImageData'
]
